Fix contract address bar z-index

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -12,7 +12,7 @@
   height: 2.5em;
   top: 0;
   background: #19181b;
-  z-index: 2000;
+  z-index: 1000;
 }
 
 .team_container {
